manifests/dev/vlanman/Deployment-switch-ssh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: switch-ssh
  namespace: vlanman
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: switch-ssh
  template:
    metadata:
      annotations:
        vlanman.dialo.ai/network: test-vlan2
        vlanman.dialo.ai/pool: primary
      labels:
        app.kubernetes.io/name: switch-ssh
    spec:
      containers:
        - command:
            - bash
            - -c
            - apt update -y && apt install -y socat && socat TCP4-LISTEN:22,fork,reuseaddr TCP4:192.168.100.10:22
          image: ubuntu:latest
          name: switch-ssh-proxy
          securityContext:
            capabilities:
              add:
                - NET_RAW
