manifests/dev/vlanman/Service-vlanman-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vlanman-webhook-service
  namespace: vlanman-system
spec:
  ports:
    - name: webhook
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: vlanman
    control-plane: controller-manager
