manifests/dev/vlanman/ValidatingWebhookConfiguration-vlanman-validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: vlanman-system/vlanman-webhook-certificate
  name: vlanman-validating-webhook
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: vlanman-webhook-service
        namespace: vlanman-system
        path: /validate-vlanman-dialo-ai-v1-vlannetwork
        port: 443
    failurePolicy: Fail
    name: webhook.vlanman.dialo.ai
    rules:
      - apiGroups:
          - vlanman.dialo.ai
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - vlannetworks
    sideEffects: None
